React Router Switch

--- a/src/App.css
+++ b/src/App.css
@@ -7,5 +7,5 @@
   align-items: center;
   display: flex;
   font-size: 17px;
-  justify-content: space-between;
+  justify-content: space-between;;
 }
